--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     Customer Database
 </h1>
 
-<div id ="customers"></div>
+<div id ="database"></div>
 
 <!-- <div class="thumbnails">
     <img src='https://randomuser.me/api/portraits/men/0.jpg'>
