--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js" defer></script>
     <script src="customers.js" defer></script>
     <script src="states.js" defer></script>
-    <script src="script.js" defer></script>
+    <!-- <script src="script.js" defer></script> -->
+    <script src="script2.js" defer></script>
 </head>
 <body>
 <h1 class="header">
     Customer Database
 </h1>
 
-<div id ="database"></div>
+<div id ="customers"></div>
+
+
 
 <!-- <div class="thumbnails">
     <img src='https://randomuser.me/api/portraits/men/0.jpg'>
